# tiktok-pull

./: .gitignore  README.md  pyproject.toml  urls.txt
tiktok_pull/: consts.py  gui.py  main.py
