[tool.poetry]
name = "tiktok-pull"
version = "0.1.0"
description = "Pull user data from TikTok"
authors = ["Joseph Bochinski <stirgejr@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
tqdm = "^4.67.1"
requests = "^2.32.3"
pyinstaller = "^6.11.1"
nanoid = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
